# image_project

./: .gitattributes  .gitignore  .pdm-python  README.md  _tmp_prompting_refs.txt  agents.md  concept_filters.py  context_injectors.py  legacy_main.py  main.py  main_legacy.py  message_handling.py  new developer experiment preparation - SceneSpec JSON Intermediary.md  new developer experiment preparation.md  new_developer_experiment_preparation.md  openai_1-5-guidance.md  openai_api.py  pipeline.py  prompt_inputs.py  prompt_plans.py  prompts.py  pyproject.toml  records.py  refinement.py  refinement_enclave.py  run_config.py  run_index.py  stage_catalog.py  titles.py  transcript.py  upscaling.py  utils.py
.todos/: spec_template.md
config/: config.full_example.yaml  config.yaml  config_repo_specific.yaml
context_plugins/: __init__.py  holiday.py  season.py
docs/: experiment_log.md  experiments.md  openai_1-5-guidance.md  pipeline.md  rclone-google-photos.md  run_review.md  scoring.md  stages.md  where_things_live.md
image_project/: __init__.py  __main__.py  cli.py
legacy/: main_legacy.py  new developer experiment preparation - SceneSpec JSON Intermediary.md  new developer experiment preparation.md  new_developer_experiment_preparation.md  quick_tests.py  run_tts.py
pipelinekit/: __init__.py  compiler.py  config_namespace.py  docs.py  stage_registry.py  stage_types.py
plan_plugins/: __init__.py  variations.py
run_review/: __init__.py  cli.py  parse_oplog.py  parse_transcript.py  render_html.py  report_builder.py  report_model.py
scripts/: list_prompt_catalog.py  manual_upscale.py  run_tts.py
tests/: conftest.py  test_action_steps_and_stage_outputs.py  test_artifacts_index_rejects_legacy_generations_csv.py  test_blackbox_prompt_refine.py  test_blackbox_scoring.py  test_cli_smoke.py  test_config_namespace_and_stage_configs.py  test_context_injectors.py  test_generate_stages_docs.py  test_generations_csv_migration_tool.py  test_import_boundaries.py  test_logging.py  test_no_compatibility_shims.py  test_novelty_config_validation.py  test_pipeline_hardening_2.py  test_pipelinekit_import_boundaries.py  test_plan_authoring_stage_instances_only.py  test_plan_variations.py  test_profile_io.py  test_prompt_plan_modifiers.py  test_refactor_main.py  test_repo_root_config_discovery.py  test_run_config_conditional_requirements.py  test_run_config_custom_stage_validation.py  test_run_config_unknown_keys.py  test_run_review.py  test_run_review_compare_experiment.py  test_run_review_evolution.py  test_stage_catalog.py  test_stage_config_consumption.py  test_stage_ownership_invariants.py  test_step_block_structure.py  test_step_recorder_and_refinement.py  test_titles.py  test_transcript_experiment.py  test_upscaling.py  (+3 more)
(+191 files in other folders)
