[project]
name = "image_project"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "jcmullwh", email = "78822128+jcmullwh@users.noreply.github.com"},
]
dependencies = [
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "pillow>=12.0.0",
    "openai>=2.8.1",
    "ffmpeg>=1.4",
    "ai-backend @ git+https://github.com/jcmullwh/ai_backend.git@main",
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pdm.scripts]
generate = "python -m image_project generate"
test = "pytest"
manual-upscale = "python tools/manual_upscale.py"
list-plans = "python -m image_project list-plans"
list-stages = "python -m image_project list-stages"
update-stages-docs = "python tools/generate_stages_doc.py"
run-review = "python -m image_project run-review"
index-artifacts = "python -m image_project index-artifacts"
experiment-3x3 = "python tools/run_experiment_3x3.py"
experiment-profile-v5-3x3 = "python tools/run_experiment_profile_v5_3x3.py"
experiment-ab-refinement-block = "python tools/run_experiment_ab_refinement_block.py"
experiment-ab-scenespec-json-intermediary = "python tools/run_experiment_ab_scenespec_json_intermediary.py"
scores-by-iteration = "python tools/write_scores_by_iteration.py"
